--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build" : "webpack",
-    "start" : "python serve.py",
+    "build": "webpack",
+    "start": "python serve.py",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "DEVINE",
   "license": "UNLICENSED",
+  "private": true,
   "dependencies": {
     "cash-dom": "^1.3.7",
     "roslib": "^0.20.0",
