--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "guesswhat"]
+[submodule "guesswhat/guesswhat"]
 	path = guesswhat/guesswhat
 	url = git@github.com:FelixMartel/guesswhat.git
