--- a/guesswhat/Dockerfile
+++ b/guesswhat/Dockerfile
@@ -6,4 +6,5 @@ WORKDIR /usr/src
 
 COPY . .
 
+ENV PYTHONPATH="/usr/src/guesswhat/src:$PYTHONPATH"
 RUN apt-get update && apt-get install -y wget && ./install_pretrained.sh ${tensorflow_package}
