Added author and maintainer to all package.xml

--- a/robot_control/irl_control/package.xml
+++ b/robot_control/irl_control/package.xml
@@ -3,6 +3,7 @@
     <version>0.0.1</version>
     <description>IRL-1 Control</description>
     <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
+    <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
     <license>BSD</license>
 
     <buildtool_depend>catkin</buildtool_depend>
