--- a/game_system/game_system/package.xml
+++ b/game_system/game_system/package.xml
@@ -3,6 +3,8 @@
   <name>game_system</name>
   <version>0.0.0</version>
   <description>The game_system package</description>
+  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
+  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <license>BSD-2</license>
   <buildtool_depend>catkin</buildtool_depend>
 
