--- a/kinect/devine_kinect/package.xml
+++ b/kinect/devine_kinect/package.xml
@@ -3,8 +3,8 @@
   <name>devine_kinect</name>
   <version>0.0.1</version>
   <description>The devine_kinect package</description>
-  <maintainer email="ismael.balafrej@usherbrooke.ca">Ismael Balafrej</maintainer>
-  <author email="ismael.balafrej@usherbrooke.ca">Ismael Balafrej</author>
+  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
+  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <license>BSD License 2.0</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>openni_camera</build_depend>
