--- a/segmentation/devine_segmentation/package.xml
+++ b/segmentation/devine_segmentation/package.xml
@@ -3,6 +3,8 @@
   <name>devine_segmentation</name>
   <version>0.0.1</version>
   <description>The devine_segmentation package</description>
+  <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
+  <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <license>BSD License 2.0</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>openni_camera</build_depend>
