--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "guesswhat/guesswhat"]
 	path = guesswhat/guesswhat
 	url = git@github.com:FelixMartel/DEVINE-guesswhat.git
-[submodule "segmentation/Mask_RCNN"]
-	path = segmentation/Mask_RCNN
+[submodule "image_processing/Mask_RCNN"]
+	path = image_processing/Mask_RCNN
 	url = git@github.com:matterport/Mask_RCNN.git
