--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "build": "webpack",
+    "build-watch": "webpack --watch",
     "start": "python3 serve.py",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
