--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,9 +12,10 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "cash-dom": "^1.3.7",
-    "roslib": "^0.20.0",
-    "uikit": "^3.0.0-beta.40"
+    "bootstrap": "^4.1.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
+    "roslib": "^0.20.0"
   },
   "devDependencies": {
     "css-loader": "^0.28.10",
