--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "build": "webpack",
     "build-watch": "webpack --watch",
-    "start": "python3 serve.py",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "python3 serve.py",
+    "start": "python3 serve.py | webpack --watch"
   },
   "author": "DEVINE",
   "license": "UNLICENSED",
