Install script progress
Signed-off-by: Felix Martel-Denis <lixtelnis@gmail.com>

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -1,6 +1,8 @@
 FROM devineproject/guesswhat
 
-ENV LIBGL_ALWAYS_SOFTWARE=1
+ENTRYPOINT []
+
+ENV LIBGL_ALWAYS_SOFTWARE=1 PATH=/root/.local/bin:$PATH
 
 WORKDIR /usr/src
 
