First version of the dialog control

--- a/dialog/dialog/package.xml
+++ b/dialog/dialog/package.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>snips</name>
+  <name>dialog</name>
   <version>0.0.0</version>
-  <description>The unofficial snips.ai package</description>
+  <description>The DEVINE dialog package</description>
   <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <license>BSD License 2.0</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <export>
   </export>
 </package>
