--- a/image_processing/devine_image_processing/package.xml
+++ b/image_processing/devine_image_processing/package.xml
@@ -19,4 +19,5 @@
   <exec_depend>openni_launch</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>devine_config</exec_depend>
 </package>
