--- a/dialog/dialog/package.xml
+++ b/dialog/dialog/package.xml
@@ -14,6 +14,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>devine_config</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <export>
   </export>
