--- a/guesswhat/devine_guesswhat/package.xml
+++ b/guesswhat/devine_guesswhat/package.xml
@@ -13,4 +13,5 @@
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>devine_config</exec_depend>
 </package>
