--- a/src/robot_control/package.xml
+++ b/src/robot_control/package.xml
@@ -1,5 +1,5 @@
 <package format="2">
-    <name>irl_control</name>
+    <name>devine_irl_control</name>
     <version>0.0.1</version>
     <description>IRL-1 Control</description>
     <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
