--- a/src/guesswhat/devine_guesswhat/package.xml
+++ b/src/guesswhat/devine_guesswhat/package.xml
@@ -14,4 +14,5 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>devine_config</exec_depend>
+  <exec_depend>devine_dialog</exec_depend>
 </package>
