Gpu backed docker image
Signed-off-by: Felix Martel-Denis <lixtelnis@gmail.com>

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -1,11 +1,14 @@
-FROM devineproject/guesswhat
+ARG guesswhat_docker=latest
+ARG tensorflow_package=tensorflow
+
+FROM devineproject/guesswhat:$guesswhat_docker
 
 ENTRYPOINT []
 
-ENV LIBGL_ALWAYS_SOFTWARE=1 PATH=/root/.local/bin:$PATH
+ENV PATH=/root/.local/bin:$PATH
 
 WORKDIR /usr/src
 
 COPY scripts/installutils.sh .
 
-RUN bash -ci ". installutils.sh && install_base $(pwd)"
+RUN bash -ci ". installutils.sh && install_base $(pwd) $tensorflow_package"
