facial expression - preliminary PR (#75)
* Added new node under IRL control.

* Update Documentation

* added node to Devine

--- a/src/robot_control/package.xml
+++ b/src/robot_control/package.xml
@@ -13,4 +13,5 @@
     <depend>sensor_msgs</depend>
     <depend>control_msgs</depend>
     <depend>trajectory_msgs</depend>
+    <depend>jn0_face_msgs</depend>
 </package>
