Add BSD license
Signed-off-by: Felix Martel-Denis <lixtelnis@gmail.com>

--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -9,7 +9,7 @@
     "start": "npm run serve | webpack --watch"
   },
   "author": "DEVINE",
-  "license": "UNLICENSED",
+  "license": "BSD",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.0",
