--- a/src/common/package.xml
+++ b/src/common/package.xml
@@ -5,7 +5,7 @@
   <description>The devine_common package</description>
   <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
-  <license>BSD License 2.0</license>
+  <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>openni_camera</build_depend>
   <build_depend>openni_launch</build_depend>
