--- a/src/config/package.xml
+++ b/src/config/package.xml
@@ -5,7 +5,7 @@
   <description>The devine_config package</description>
   <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
-  <license>BSD License 2.0</license>
+  <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <export>
   </export>
