--- a/src/dashboard/package.xml
+++ b/src/dashboard/package.xml
@@ -5,7 +5,7 @@
   <description>The devine_dashboard package</description>
   <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
-  <license>BSD License 2.0</license>
+  <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
