--- a/src/devine/package.xml
+++ b/src/devine/package.xml
@@ -6,7 +6,7 @@
   <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <url>https://devine.gel.usherbrooke.ca</url>
-  <license>BSD License 2.0</license>
+  <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>devine_common</exec_depend>
   <exec_depend>devine_config</exec_depend>
