--- a/src/game_system/package.xml
+++ b/src/game_system/package.xml
@@ -5,7 +5,7 @@
   <description>The devine_game_system package</description>
   <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
-  <license>BSD License 2.0</license>
+  <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
