--- a/src/dashboard/package.xml
+++ b/src/dashboard/package.xml
@@ -7,9 +7,8 @@
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>devine_config</exec_depend>
+  <depend>rosbridge_server</depend>
+  <depend>devine_config</depend>
   <export>
   </export>
 </package>
