--- a/src/devine/package.xml
+++ b/src/devine/package.xml
@@ -8,13 +8,15 @@
   <url>https://devine.gel.usherbrooke.ca</url>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>devine_common</exec_depend>
-  <exec_depend>devine_config</exec_depend>
-  <exec_depend>devine_dashboard</exec_depend>
-  <exec_depend>devine_dialog</exec_depend>
-  <exec_depend>devine_guesswhat</exec_depend>
-  <exec_depend>devine_image_processing</exec_depend>
-  <exec_depend>devine_irl_control</exec_depend>
+  <depend>devine_common</depend>
+  <depend>devine_config</depend>
+  <depend>devine_dashboard</depend>
+  <depend>devine_dialog</depend>
+  <depend>devine_guesswhat</depend>
+  <depend>devine_image_processing</depend>
+  <depend>devine_irl_control</depend>
+  <depend>openni_camera</depend>
+  <depend>openni_launch</depend>
   <export>
   </export>
 </package>
