--- a/src/game_system/package.xml
+++ b/src/game_system/package.xml
@@ -7,17 +7,14 @@
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_export_depend>openni_camera</build_export_depend>
-  <build_export_depend>openni_launch</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <exec_depend>openni_camera</exec_depend>
-  <exec_depend>openni_launch</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>devine_config</exec_depend>
+  <depend>rospy</depend>
+  <depend>std_msgs</depend>
+  <depend>trajectory_msgs</depend>
+  <depend>control_msgs</depend>
+  <depend>devine_config</depend>
+  <depend>devine_common</depend>
+  <depend>devine_dialog</depend>
+  <depend>devine_irl_control</depend>
   <export>
   </export>
 </package>
