--- a/src/robot_control/CMakeLists.txt
+++ b/src/robot_control/CMakeLists.txt
@@ -1,21 +1,20 @@
-cmake_minimum_required(VERSION 2.4.6)
+cmake_minimum_required(VERSION 2.8.3)
 project(devine_irl_control)
 
 find_package(catkin REQUIRED COMPONENTS 
-   rospy 
-   actionlib 
-   std_msgs 
-   sensor_msgs 
-   control_msgs 
-   trajectory_msgs
+  rospy
+  tf
+  actionlib
+  std_msgs
+  sensor_msgs
+  control_msgs
+  trajectory_msgs
+  jn0_face_msgs
 )
 
 catkin_python_setup()
 
-catkin_package(CATKIN_DEPENDS
-  rospy
-  actionlib
-  sensor_msgs
-  control_msgs
-  trajectory_msgs
-)
+###################################
+## catkin specific configuration ##
+###################################
+catkin_package()
