--- a/src/robot_control/package.xml
+++ b/src/robot_control/package.xml
@@ -7,6 +7,7 @@
     <license>BSD</license>
     <buildtool_depend>catkin</buildtool_depend>
     <depend>rospy</depend>
+    <depend>tf</depend>
     <depend>actionlib</depend>
     <depend>std_msgs</depend>
     <depend>sensor_msgs</depend>
