--- a/src/scene_finder/package.xml
+++ b/src/scene_finder/package.xml
@@ -7,13 +7,14 @@
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <exec_depend>openni_camera</exec_depend>
-  <exec_depend>openni_launch</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>apriltags2_ros</exec_depend>
-  <exec_depend>devine_config</exec_depend>
-  <exec_depend>devine_irl_control</exec_depend>
+  <depend>rospy</depend>
+  <depend>actionlib</depend>
+  <depend>tf</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>control_msgs</depend>
+  <depend>trajectory_msgs</depend>
+  <depend>apriltags2_ros</depend>
+  <depend>devine_config</depend>
+  <depend>devine_irl_control</depend>
 </package>
