--- a/tests/package.xml
+++ b/tests/package.xml
@@ -8,7 +8,7 @@
   <url>https://devine.gel.usherbrooke.ca</url>
   <license>BSD License 2.0</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>devine_image_processing</exec_depend>
+  <depend>devine_image_processing</depend>
   <export>
   </export>
 </package>
