--- a/src/robot_control/package.xml
+++ b/src/robot_control/package.xml
@@ -13,5 +13,7 @@
     <depend>sensor_msgs</depend>
     <depend>control_msgs</depend>
     <depend>trajectory_msgs</depend>
+    <depend>geometry_msgs</depend>
+    <depend>visualization_msgs</depend>
     <depend>jn0_face_msgs</depend>
 </package>
