--- a/src/head_coordinator/package.xml
+++ b/src/head_coordinator/package.xml
@@ -9,6 +9,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rospy</depend>
   <depend>actionlib</depend>
+  <depend>actionlib_msgs</depend>
+  <depend>message_generation</depend>
   <depend>tf</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
