--- a/src/image_processing/package.xml
+++ b/src/image_processing/package.xml
@@ -7,6 +7,8 @@
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <depend>message_runtime</depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
