Started the integration of human_finder in head_coordinator

--- a/src/head_coordinator/CMakeLists.txt
+++ b/src/head_coordinator/CMakeLists.txt
@@ -15,6 +15,8 @@ find_package(catkin REQUIRED COMPONENTS
   devine_irl_control
 )
 
+catkin_python_setup()
+
 add_action_files(
   DIRECTORY action
   FILES LookAtHuman.action
