Dynamic image dimensions utilities instead of hardcoding Converted the feature_extraction node to an ImageProcessor Created a custom VGG16 message type with a header Moved the guess percentage to the right of the obj labels in the dashboard to avoid overlaps Added TODOs in the dashboard Reverted to greedy in GW node Tested another batchifier in GW node Fixed object ids bug in GW node Removed spam log of waiting for image processing in GW node

--- a/src/image_processing/package.xml
+++ b/src/image_processing/package.xml
@@ -9,6 +9,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <depend>message_runtime</depend>
+  <depend>python-numpy</depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
