--- a/src/devine/package.xml
+++ b/src/devine/package.xml
@@ -5,7 +5,7 @@
   <description>The devine core base package</description>
   <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
-  <url>https://devineproject.github.io/</url>
+  <url>https://devine.gel.usherbrooke.ca</url>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>devine_common</depend>
