--- a/tests/package.xml
+++ b/tests/package.xml
@@ -5,7 +5,7 @@
   <description>The devine test package</description>
   <maintainer email="devine.gegi@listes.usherbrooke.ca">DEVINE</maintainer>
   <author email="devine.gegi@listes.usherbrooke.ca">DEVINE</author>
-  <url>https://devineproject.github.io/</url>
+  <url>https://devine.gel.usherbrooke.ca</url>
   <license>BSD License 2.0</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>devine_image_processing</depend>
