--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "image_processing/Mask_RCNN"]
 	path = src/image_processing/Mask_RCNN
-	url = git@github.com:matterport/Mask_RCNN.git
+	url = https://github.com/matterport/Mask_RCNN.git
